[gd_scene load_steps=34 format=1]

[ext_resource path="res://scripts/garage.gd" type="Script" id=1]
[ext_resource path="res://cubemaps/nebula/skybox_right.png" type="Texture" id=2]
[ext_resource path="res://scripts/ship show.gd" type="Script" id=3]
[ext_resource path="res://scripts/garage ship rotate.gd" type="Script" id=4]
[ext_resource path="res://models/scened model/fighter01.scn" type="PackedScene" id=5]
[ext_resource path="res://models/scened model/fighter02.scn" type="PackedScene" id=6]
[ext_resource path="res://models/scened model/fighter03.scn" type="PackedScene" id=7]
[ext_resource path="res://models/scened model/fighter04.scn" type="PackedScene" id=8]
[ext_resource path="res://models/scened model/fighter05.scn" type="PackedScene" id=9]
[ext_resource path="res://models/cybase.msh" type="Mesh" id=10]
[ext_resource path="res://textures/Space_Ship_Plate_04.tex" type="Texture" id=11]
[ext_resource path="res://cubemaps/nebula/skybox_up.png" type="Texture" id=12]
[ext_resource path="res://sprites/keys/KeyboardButtonsDir_right.png" type="Texture" id=13]
[ext_resource path="res://sprites/keys/KeyboardButtonsDir_left.png" type="Texture" id=14]
[ext_resource path="res://sprites/button-28032_960_720.tex" type="Texture" id=15]
[ext_resource path="res://sprites/shield.png" type="Texture" id=16]
[ext_resource path="res://sprites/fillbar.png" type="Texture" id=17]
[ext_resource path="res://scripts/shield_upgrade.gd" type="Script" id=18]
[ext_resource path="res://sprites/fighter_health spr.tex" type="Texture" id=19]
[ext_resource path="res://scripts/health_upgrade.gd" type="Script" id=20]
[ext_resource path="res://sprites/drones.png" type="Texture" id=21]
[ext_resource path="res://scripts/buy_drone.gd" type="Script" id=22]
[ext_resource path="res://sprites/colorbox.png" type="Texture" id=23]
[ext_resource path="res://scripts/Color Change.gd" type="Script" id=24]
[ext_resource path="res://resources/space.fnt" type="BitmapFont" id=25]
[ext_resource path="res://sprites/customise.png" type="Texture" id=26]
[ext_resource path="res://resources/pdark num.fnt" type="BitmapFont" id=27]
[ext_resource path="res://scenes/Buybox.tscn" type="PackedScene" id=28]
[ext_resource path="res://sound/space.ogg" type="AudioStream" id=29]

[sub_resource type="FixedMaterial" id=1]

flags/visible = true
flags/double_sided = false
flags/invert_faces = false
flags/unshaded = false
flags/on_top = false
flags/lightmap_on_uv2 = true
flags/colarray_is_srgb = true
params/blend_mode = 0
params/depth_draw = 1
params/line_width = 0.0
fixed_flags/use_alpha = false
fixed_flags/use_color_array = false
fixed_flags/use_point_size = false
fixed_flags/discard_alpha = false
fixed_flags/use_xy_normalmap = false
params/diffuse = Color( 1, 1, 1, 1 )
params/specular = Color( 0, 0, 0, 1 )
params/emission = Color( 0, 0, 0, 1 )
params/specular_exp = 40
params/detail_mix = 1.0
params/normal_depth = 1
params/shader = 0
params/shader_param = 0.5
params/glow = 0
params/point_size = 1.0
uv_xform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
textures/diffuse = ExtResource( 11 )
textures/diffuse_tc = 0
textures/detail_tc = 0
textures/specular_tc = 0
textures/emission_tc = 0
textures/specular_exp_tc = 0
textures/glow_tc = 0
textures/normal_tc = 0
textures/shade_param_tc = 0

[sub_resource type="Environment" id=2]

ambient_light/enabled = true
ambient_light/color = Color( 0.63562, 0.640625, 0.636754, 1 )
ambient_light/energy = 0.18
fxaa/enabled = false
background/mode = 3
background/color = Color( 0.019043, 0.152344, 0.02425, 1 )
background/texture = ExtResource( 12 )
background/energy = 1.0
background/scale = 1.0
background/glow = 0.03
background/canvas_max_layer = null
glow/enabled = false
glow/blur_passes = 1
glow/blur_scale = 1
glow/blur_strength = 1
glow/blur_blend_mode = null
glow/bloom = 0.0
glow/bloom_treshold = 0.5
dof_blur/enabled = false
dof_blur/blur_passes = 1
dof_blur/begin = 100.0
dof_blur/range = 10.0
hdr/enabled = false
hdr/tonemapper = 0
hdr/exposure = 0.4
hdr/white = 1.0
hdr/glow_treshold = 0.95
hdr/glow_scale = 0.2
hdr/min_luminance = 0.4
hdr/max_luminance = 8.0
hdr/exposure_adj_speed = 0.5
fog/enabled = false
fog/begin = 100.0
fog/begin_color = Color( 0, 0, 0, 1 )
fog/end_color = Color( 0, 0, 0, 1 )
fog/attenuation = 1.0
fog/bg = true
bcs/enabled = false
bcs/brightness = 1.0
bcs/contrast = 1.0
bcs/saturation = 1.0
srgb/enabled = false

[sub_resource type="Animation" id=3]

resource/name = "open colour"
length = 1.0
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:rect/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Control:rect/size")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1027, 593 ), Vector2( 561, 320 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control:rect/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -219, -92 ), Vector2( 13, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/Viewport/Spatial/Camera:transform/translation")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -4.9904, 1.70975, 0 ), Vector3( -3.04671, 1.45632, -0.263162 ) ]
}

[node name="garage" type="Node"]

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 223.0
margin/top = 95.0
margin/right = 815.0
margin/bottom = 398.0
script/script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="Control"]

transform/pos = Vector2( 292.859, 228.014 )
transform/scale = Vector2( 2.1164, 1.52334 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -219.0
margin/top = -93.0
margin/right = 808.0
margin/bottom = 500.0

[node name="Viewport" type="Viewport" parent="Control/Control"]

editor/display_folded = true
rect = Rect2( 0, 0, 1027, 593 )
own_world = false
world = null
transparent_bg = false
render_target/enabled = false
render_target/v_flip = false
render_target/clear_on_new_frame = true
render_target/filter = false
render_target/gen_mipmaps = false
render_target/update_mode = 2
audio_listener/enable_2d = false
audio_listener/enable_3d = false
physics/object_picking = false
gui/disable_input = false

[node name="Spatial" type="Spatial" parent="Control/Control/Viewport"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="ships" type="Spatial" parent="Control/Control/Viewport/Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0 )
script/script = ExtResource( 3 )

[node name="ship1" type="Spatial" parent="Control/Control/Viewport/Spatial/ships"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0 )
script/script = ExtResource( 4 )

[node name="fighter1" parent="Control/Control/Viewport/Spatial/ships/ship1" instance=ExtResource( 5 )]

editor/display_folded = true

[node name="ship2" type="Spatial" parent="Control/Control/Viewport/Spatial/ships"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.472, 0, 7.608 )
script/script = ExtResource( 4 )

[node name="fighter2" parent="Control/Control/Viewport/Spatial/ships/ship2" instance=ExtResource( 6 )]

transform/local = Transform( 0.521906, 0, 0, 0, 0.521906, 0, 0, 0, 0.521906, 0, 0, 0 )

[node name="ship3" type="Spatial" parent="Control/Control/Viewport/Spatial/ships"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.472, 0, 4.702 )
script/script = ExtResource( 4 )

[node name="fighter3" parent="Control/Control/Viewport/Spatial/ships/ship3" instance=ExtResource( 7 )]

[node name="ship4" type="Spatial" parent="Control/Control/Viewport/Spatial/ships"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.472, 0, -4.702 )
script/script = ExtResource( 4 )

[node name="fighter4" parent="Control/Control/Viewport/Spatial/ships/ship4" instance=ExtResource( 8 )]

[node name="ship5" type="Spatial" parent="Control/Control/Viewport/Spatial/ships"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.472, 0, -7.608 )
script/script = ExtResource( 4 )

[node name="fighter5" parent="Control/Control/Viewport/Spatial/ships/ship5" instance=ExtResource( 9 )]

[node name="Camera" type="Camera" parent="Control/Control/Viewport/Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -0.0292594, 0.232397, -0.68507, -0.0192464, 0.685137, 0.233242, 0.723159, 0.0276374, -0.0215107, -4.9904, 1.70975, 0 )
projection = 0
fov = 70.0
near = 0.1
far = 100.0
keep_aspect = 1
current = true
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="OmniLight2" type="OmniLight" parent="Control/Control/Viewport/Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.91863, 0.599103, -0.114087 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 3.0
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.001
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
params/radius = 5.89876
params/attenuation = 1.0

[node name="MeshInstance" type="MeshInstance" parent="Control/Control/Viewport/Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 6.21593, 0, 0, 0, 6.21593, 0, 0, 0, 6.21593, 7.42793, 0, 0 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
mesh/mesh = ExtResource( 10 )
mesh/skeleton = NodePath("..")
material/0 = SubResource( 1 )

[node name="MeshInstance1" type="MeshInstance" parent="Control/Control/Viewport/Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 13.189, 0, 0, 0, 1, 0, 0, 0, 13.189, 7.50948, -6.22877, 0 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
mesh/mesh = ExtResource( 10 )
mesh/skeleton = NodePath("..")
material/0 = SubResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="Control/Control/Viewport/Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
environment = SubResource( 2 )

[node name="TextureButton" type="TextureButton" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 672.0
margin/top = 120.0
margin/right = 774.0
margin/bottom = 222.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 13 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0

[node name="TextureButton1" type="TextureButton" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -155.0
margin/top = 120.0
margin/right = -121.0
margin/bottom = 154.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 14 )
params/resize_mode = 0
params/scale = Vector2( 3, 3 )
params/stretch_mode = 0

[node name="Play" type="Button" parent="Control"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 617.0
margin/top = 351.0
margin/right = 762.0
margin/bottom = 457.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 15 )
flat = true

[node name="shield" type="Sprite" parent="Control/Play"]

editor/display_folded = true
transform/pos = Vector2( 72.8684, -70.3153 )
transform/scale = Vector2( 0.273218, 0.273218 )
texture = ExtResource( 16 )

[node name="1" type="Sprite" parent="Control/Play/shield"]

transform/pos = Vector2( -11.9448, -317.811 )
transform/scale = Vector2( 1.00707, 1.07839 )
texture = ExtResource( 17 )
modulate = Color( 0.558157, 0.574064, 0.988281, 1 )

[node name="2" type="Sprite" parent="Control/Play/shield"]

transform/pos = Vector2( -8.28471, -559.377 )
transform/scale = Vector2( 1.00707, 1.07839 )
texture = ExtResource( 17 )

[node name="3" type="Sprite" parent="Control/Play/shield"]

transform/pos = Vector2( -8.28471, -815.584 )
transform/scale = Vector2( 1.00707, 1.07839 )
texture = ExtResource( 17 )

[node name="shieldbutton" type="Button" parent="Control/Play/shield"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -182.0
margin/top = -184.0
margin/right = 184.0
margin/bottom = 176.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 16 )
flat = true
script/script = ExtResource( 18 )

[node name="HP" type="Sprite" parent="Control/Play"]

editor/display_folded = true
transform/pos = Vector2( -731.602, -55.3082 )
transform/scale = Vector2( 0.186568, 0.186568 )
texture = ExtResource( 19 )

[node name="1" type="Sprite" parent="Control/Play/HP"]

transform/pos = Vector2( -4.24933, -556.575 )
transform/scale = Vector2( 1.4748, 1.57924 )
texture = ExtResource( 17 )
flip_h = true

[node name="2" type="Sprite" parent="Control/Play/HP"]

transform/pos = Vector2( 1.11066, -883.535 )
transform/scale = Vector2( 1.4748, 1.57924 )
texture = ExtResource( 17 )
flip_h = true

[node name="3" type="Sprite" parent="Control/Play/HP"]

transform/pos = Vector2( 1.11066, -1258.74 )
transform/scale = Vector2( 1.4748, 1.57924 )
texture = ExtResource( 17 )
flip_h = true

[node name="health_upgrade" type="Button" parent="Control/Play/HP"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -310.0
margin/top = -301.0
margin/right = 306.0
margin/bottom = 309.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 19 )
flat = true
script/script = ExtResource( 20 )

[node name="drones" type="Sprite" parent="Control/Play"]

transform/pos = Vector2( -393.394, 69.2984 )
texture = ExtResource( 21 )

[node name="1" type="Sprite" parent="Control/Play/drones"]

transform/pos = Vector2( 81.3513, -7.07629 )
transform/rot = 90.0
transform/scale = Vector2( 0.275006, 0.275006 )
texture = ExtResource( 17 )

[node name="2" type="Sprite" parent="Control/Play/drones"]

transform/pos = Vector2( 149.351, -7.07629 )
transform/rot = 90.0
transform/scale = Vector2( 0.275006, 0.275006 )
texture = ExtResource( 17 )

[node name="3" type="Sprite" parent="Control/Play/drones"]

transform/pos = Vector2( 218.351, -7.07629 )
transform/rot = 90.0
transform/scale = Vector2( 0.275006, 0.275006 )
texture = ExtResource( 17 )

[node name="drone_buy" type="Button" parent="Control/Play/drones"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -49.0
margin/top = -53.0
margin/right = 51.0
margin/bottom = 51.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 21 )
flat = true
script/script = ExtResource( 22 )

[node name="color" type="Button" parent="Control/Play"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -802.0
margin/top = 16.0
margin/right = -690.0
margin/bottom = 122.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 23 )
flat = true

[node name="Panel" type="Panel" parent="Control/Play/color"]

visibility/behind_parent = true
rect/scale = Vector2( 0, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 44.0
margin/top = 22.0
margin/right = 319.0
margin/bottom = 91.0

[node name="ColorPickerButton" type="ColorPickerButton" parent="Control/Play/color/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 61.0
margin/top = 11.0
margin/right = 150.0
margin/bottom = 60.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "pick color"
flat = false
color = Color( 1, 1, 1, 1 )
edit_alpha = false
script/script = ExtResource( 24 )

[node name="ColorPickerButton2" type="ColorPickerButton" parent="Control/Play/color/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 174.0
margin/top = 11.0
margin/right = 263.0
margin/bottom = 60.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "pick color"
flat = false
color = Color( 1, 1, 1, 1 )
edit_alpha = false
script/script = ExtResource( 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Play/color"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/open colour" = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Sprite" type="Sprite" parent="Control/Play/color"]

transform/pos = Vector2( 56.3911, 57.4106 )
texture = ExtResource( 23 )

[node name="Customise" type="Button" parent="Control"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 513.0
margin/top = 375.0
margin/right = 768.0
margin/bottom = 448.0
custom_fonts/font = ExtResource( 25 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Customise"
icon = ExtResource( 26 )
flat = true

[node name="buyship" type="Button" parent="Control/Customise"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -600.0
margin/top = 14.0
margin/right = -511.0
margin/bottom = 69.0
custom_fonts/font = ExtResource( 25 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BUY"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/customise = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Header" type="Label" parent="Control"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 83.0
margin/top = -71.0
margin/right = 228.0
margin/bottom = -36.0
custom_fonts/font = ExtResource( 27 )
custom_colors/font_color = Color( 0, 0.108643, 0.695312, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 0
text = "Garage"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Control2" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 1.0
margin/right = 40.0
margin/bottom = 41.0

[node name="Patch9Frame" parent="Control2" instance=ExtResource( 28 )]

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 29 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="Control/TextureButton" to="Control/Control/Viewport/Spatial/ships" method="_on_TextureButton_pressed"]

[connection signal="pressed" from="Control/TextureButton1" to="Control/Control/Viewport/Spatial/ships" method="_on_TextureButton1_pressed"]

[connection signal="pressed" from="Control/Play" to="Control/Control/Viewport/Spatial/ships" method="_on_Button_pressed"]

[connection signal="pressed" from="Control/Play/shield/shieldbutton" to="Control/Play/shield/shieldbutton" method="_on_shieldbutton_pressed"]

[connection signal="pressed" from="Control/Play/HP/health_upgrade" to="Control/Play/HP/health_upgrade" method="_on_health_upgrade_pressed"]

[connection signal="pressed" from="Control/Play/drones/drone_buy" to="Control/Play/drones/drone_buy" method="_on_drone_buy_pressed"]

[connection signal="toggled" from="Control/Play/color" to="Control" method="_on_color_toggled"]

[connection signal="color_changed" from="Control/Play/color/Panel/ColorPickerButton" to="Control/Control/Viewport/Spatial/ships" method="_on_ColorPickerButton_color_changed"]

[connection signal="pressed" from="Control/Play/color/Panel/ColorPickerButton" to="Control/Play/color/Panel/ColorPickerButton" method="_on_ColorPickerButton_pressed"]

[connection signal="color_changed" from="Control/Play/color/Panel/ColorPickerButton2" to="Control/Control/Viewport/Spatial/ships" method="_on_ColorPickerButton2_color_changed"]

[connection signal="pressed" from="Control/Play/color/Panel/ColorPickerButton2" to="Control/Play/color/Panel/ColorPickerButton2" method="_on_ColorPickerButton2_pressed"]

[connection signal="pressed" from="Control/Customise" to="Control" method="_on_Customise_pressed"]

[connection signal="pressed" from="Control/Customise/buyship" to="Control" method="_on_buyship_pressed"]


[editable path="Control/Control/Viewport/Spatial/ships/ship1/fighter1"]
